last update image

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	===========================================-->
 
 	<!--==========================================
-			 	Start Header area
+			 	Start Hero area
 	===========================================-->
 	<section class="hero_section">
 		<div class="container">
@@ -72,7 +72,7 @@
 				<div class="col-12">
 					<div class="middle_content text-center">
 						<h2>Making web3 inclusive and accessible
-						with NFT by email</h2>
+							with NFT by email</h2>
 					</div>
 				</div>
 			</div>
@@ -81,7 +81,7 @@
 				<div class="col-md-4">
 					<div class="single_item">
 						<div class="icon">
-							<img src="assets/images/icon/user.png" alt="Icon">
+							<img src="assets/images/icon/icon-1.png" alt="Icon">
 						</div>
 						<div class="content">
 							<h4>No prerequisites</h4>
@@ -94,7 +94,7 @@
 				<div class="col-md-4">
 					<div class="single_item">
 						<div class="icon">
-							<img src="assets/images/icon/user.png" alt="Icon">
+							<img src="assets/images/icon/icon-2.png" alt="Icon">
 						</div>
 						<div class="content">
 							<h4>Email enabled</h4>
@@ -107,7 +107,7 @@
 				<div class="col-md-4">
 					<div class="single_item">
 						<div class="icon">
-							<img src="assets/images/icon/user.png" alt="Icon">
+							<img src="assets/images/icon/icon-3.png" alt="Icon">
 						</div>
 						<div class="content">
 							<h4>No gas ?</h4>
@@ -120,7 +120,7 @@
 		</div>
 	</section>
 	<!--==========================================
-				End Header area
+				End Hero area
 	===========================================-->
 
 	<!--jquery js-->
