--- a/sign-out.html
+++ b/sign-out.html
@@ -56,7 +56,7 @@
 							</ul>
 						</div>
 					</div>
-					
+
 				</div>
 				<!-- Menu  -->
 			</div>
@@ -67,15 +67,15 @@
 	===========================================-->
 
 	<!--==========================================
-			 	Start Header area
-	===========================================-->
+				 	Start Hero area
+		===========================================-->
 	<section class="hero_section">
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
 					<div class="middle_content text-center">
 						<h2>Making web3 inclusive and accessible
-						with NFT by email</h2>
+							with NFT by email</h2>
 					</div>
 				</div>
 			</div>
@@ -84,7 +84,7 @@
 				<div class="col-md-4">
 					<div class="single_item">
 						<div class="icon">
-							<img src="assets/images/icon/user.png" alt="Icon">
+							<img src="assets/images/icon/icon-1.png" alt="Icon">
 						</div>
 						<div class="content">
 							<h4>No prerequisites</h4>
@@ -97,7 +97,7 @@
 				<div class="col-md-4">
 					<div class="single_item">
 						<div class="icon">
-							<img src="assets/images/icon/user.png" alt="Icon">
+							<img src="assets/images/icon/icon-2.png" alt="Icon">
 						</div>
 						<div class="content">
 							<h4>Email enabled</h4>
@@ -110,7 +110,7 @@
 				<div class="col-md-4">
 					<div class="single_item">
 						<div class="icon">
-							<img src="assets/images/icon/user.png" alt="Icon">
+							<img src="assets/images/icon/icon-3.png" alt="Icon">
 						</div>
 						<div class="content">
 							<h4>No gas ?</h4>
@@ -123,8 +123,8 @@
 		</div>
 	</section>
 	<!--==========================================
-				End Header area
-	===========================================-->
+					End Hero area
+		===========================================-->
 
 	<!--jquery js-->
 	<script src="assets/js/jquery.js"></script>
